[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-reliability-framework"
version = "3.3.0"
description = "Agentic Reliability Framework - OSS Edition"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Juan Petter", email = "ai@petterjuan.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "faiss-cpu>=1.7.0",
]

[tool.setuptools.packages.find]
include = ["agentic_reliability_framework*"]
exclude = ["tests*", "examples*", "scripts*"]
