[project]
name = "agentic-reliability-enterprise"
version = "1.0.1"  # Bumped for dependency fix
description = "Enterprise edition of ARF with autonomous execution, audit trails, and learning"
readme = "README.md"
license = {text = "Commercial"}
authors = [
    {name = "Juan Petter", email = "juan@arf.dev"}
]
requires-python = ">=3.10"  # CRITICAL: Must match OSS version
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Recovery Tools",
]

# ============================================================================
# CRITICAL FIX: OSS is REQUIRED, not optional!
# ============================================================================
dependencies = [
    "agentic-reliability-framework>=3.3.4,<4.0.0",  # MUST BE REQUIRED!
    "pyjwt>=2.8.0,<3.0.0",
    "cryptography>=41.0.0,<42.0.0",
    "sqlite-utils>=3.35.0,<4.0.0"
]

[project.urls]
Homepage = "https://arf.dev"
Documentation = "https://docs.arf.dev/enterprise"
"Purchase License" = "https://arf.dev/pricing"
Support = "https://support.arf.dev"

[project.optional-dependencies]
# OSS REMOVED from here - it's now a required dependency above
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

postgres = [
    "psycopg2-binary",
    "pgvector"
]

neo4j = [
    "neo4j>=5.0.0,<6.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
